# ChangeLog for sys-apps/man-pages
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.2 2002/06/06 01:17:35 seemant Exp $

*man-pages-1.50 (5 Jun 2002)

  5 Jun 2002; Seemant Kulleen <seemant@gentoo.org> man-pages-1.50.ebuild
  files/digest-man-pages-1.50 :

  Version bump.

*man-pages-1.43-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.