@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/man-pages
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.2 2002/06/06 01:17:35 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/man-pages/ChangeLog,v 1.3 2002/06/12 01:23:45 seemant Exp $
+
+*man-pages-1.51 (11 Jun 2002)
+
+  11 Jun 2002; Seemant Kulleen <seemant@gentoo.org> man-pages-1.51.ebuild
+  files/digtest-man-pages-1.51 :
+
+  Version bump.
 
 *man-pages-1.50 (5 Jun 2002)
 
